tests/fixtures/invalid/abs_no_args.py
# abs() takes exactly 1 argument
print(abs())
